# revision_codigo_proyecto_codigo_snies_

./: .gitignore  CMakeLists.txt  README.md
docs/inputs/: programas.csv
docs/outputs/: Ejemplo - ResultadoEsperado.csv  ResultadoEsperado.xlsx
src/: Consolidado.cpp  Consolidado.h  GestorCsv.cpp  GestorCsv.h  MODELOS.md  ProgramaAcademico.cpp  ProgramaAcademico.h  SNIESController.cpp  SNIESController.h  Settings.h  View.cpp  View.h  main.cpp
